--- a/src/common.blocks/page.scss
+++ b/src/common.blocks/page.scss
@@ -8,6 +8,10 @@ html, body.page {
 	background: $background;
 }
 
+body.page:has(> .modal_active) {
+    overflow: hidden;
+}
+
 .page__wrapper {
 	width: 100%;
 
