--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -1,75 +1,74 @@
-@use "variables" as *;
-@use "mixins";
+@use 'variables' as *;
+@use 'mixins';
 
 .modal {
-  @include mixins.sublayer;
-  height: max-content;
-  position: fixed;
-  display: none;
-  justify-content: center;
-  background-color: $overlayBackground;
-  z-index: 100;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+	@include mixins.sublayer;
+	height: max-content;
+	position: fixed;
+	display: none;
+	justify-content: center;
+	background-color: $overlayBackground;
+	z-index: 100;
+	padding-top: 5vh;
+	padding-bottom: 5vh;
 
-  &_active {
+	&_active {
+		display: flex;
+		min-height: 90vmin;
+		height: 100%;
+		overflow: scroll;
+	}
 
-    display: flex;
-    min-height: 90vmin;
-    height: 100%;
-    overflow: scroll;
-  }
+	&__container {
+		@include mixins.container;
+		@include mixins.flex(column);
+		gap: $defaultPadding;
+		background-color: $background;
+		margin: auto;
+		border-radius: 3rem;
+		box-sizing: border-box;
+		position: relative;
+	}
 
-  &__container {
-    @include mixins.container;
-    @include mixins.flex(column);
-    gap: $defaultPadding;
-    background-color: $background;
-    margin: auto;
-    border-radius: 3rem;
-    box-sizing: border-box;
-    position: relative;
-  }
+	&__content {
+		flex-grow: 1;
+	}
 
-  &__content {
-    flex-grow: 1;
-  }
+	&__title {
+		margin: 0;
+		font-size: 1.5rem;
+		font-weight: 400;
+	}
 
-  &__title {
-    margin: 0;
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
+	&__actions {
+		@include mixins.flex(row);
+		align-items: center;
+		gap: 2rem;
+	}
 
-  &__actions {
-    @include mixins.flex(row);
-    align-items: center;
-    gap: 2rem;
-  }
+	&__close {
+		position: absolute;
+		overflow: hidden;
+		top: calc(#{$defaultPadding} / 2);
+		right: calc(#{$defaultPadding} / 2);
+		@include mixins.icon(2rem, 'close');
+		@include mixins.link(white, $hover);
+	}
 
-  &__close {
-    position: absolute;
-    overflow: hidden;
-    top: calc(#{$defaultPadding} / 2);
-    right: calc(#{$defaultPadding} / 2);
-    @include mixins.icon(2rem, 'close');
-    @include mixins.link(white, $hover);
-  }
+	&__footer {
+		@include mixins.flex(row);
+		align-items: center;
+		gap: 2rem;
+	}
 
-  &__footer {
-    @include mixins.flex(row);
-    align-items: center;
-    gap: 2rem;
-  }
+	&__message {
+		white-space: nowrap;
+		max-width: 60%;
+		text-overflow: ellipsis;
+		overflow: hidden;
 
-  &__message {
-    white-space:nowrap;
-    max-width: 60%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-
-    &_error {
-      color: $error;
-    }
-  }
+		&_error {
+			color: $error;
+		}
+	}
 }
