--- a/src/common.blocks/page.scss
+++ b/src/common.blocks/page.scss
@@ -1,6 +1,7 @@
-@use "variables" as *;
+@use 'variables' as *;
 
-html, body.page {
+html,
+body.page {
 	height: 100%;
 	font-family: $font;
 	font-size: $baseFontSize;
@@ -9,7 +10,7 @@ html, body.page {
 }
 
 body.page:has(> .modal_active) {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .page__wrapper {
